--- a/css/stack.css
+++ b/css/stack.css
@@ -1,4 +1,4 @@
-body {
+#stack_div {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: auto;
   position: relative;
@@ -21,3 +21,4 @@ form {
   right: 10px;
   top: 10px;
 }
+
